--- a/Booking.View/Components/BookingConfirmation.razor
+++ b/Booking.View/Components/BookingConfirmation.razor
@@ -2,31 +2,66 @@
 
 @using Request.HTTP.DTO.MovieTheatreDTO
 
-<h3>BOKNINGS BEKRÄFTELSE</h3>
-<div class="receipt-container" style="width: 100%; border: 2px solid #000000; border-radius: 8px; padding: 5px;">
-    <h3>Booking Receipt</h3>
-    <div class="mb-1">
-        <label class="form-label">Namn:</label>
-        <span>@booker.Name</span>
-    </div>
-    <div class="mb-1">
-        <label class="form-label">Efternamn:</label>
-        <span>@booker.LastName</span>
-    </div>
-    <div class="mb-1">
-        <label class="form-label">Email:</label>
-        <span>@booker.Email</span>
-    </div>
-    <div class="mb-1">
-        <label class="form-label">Telefonnummer:</label>
-        <span>@booker.PhoneNumber</span>
-    </div>
-    <div class="mb-1">
-        <label class="form-label">Boknings nummer:</label>
-        <span>@booker.BookingNumber</span>
-    </div>
-</div>
+<style>
+    body {
+        margin-top: 10px;
+        background-color: #f8f9fa;
+    }
 
+    .container {
+        margin-top: 25px;
+    }
+
+    .card {
+        background-color: #ffffff;
+        border: 2px solid #000000;
+        border-radius: 8px;
+        margin: 100px;
+    }
+
+    .card-title {
+        color: black;
+    }
+
+    .form-label {
+        color: #343a40;
+        font-weight: bold;
+    }
+
+    .form-control {
+        background-color: #f1f3f5;
+    }
+
+</style>
+
+<div class="container">
+    <div class="card mx-auto mt-5" style="max-width: 500px;">
+
+            <div class="receipt-container" style="width: 100%; border: 2px solid #000000; border-radius: 8px; padding: 5px;">
+                <h3 class="text-center">Bokningsbefräftelse</h3>
+                <div class="mb-1">
+                    <label class="form-label">Namn:</label>
+                    <span>@booker.Name</span>
+                </div>
+                <div class="mb-1">
+                    <label class="form-label">Efternamn:</label>
+                    <span>@booker.LastName</span>
+                </div>
+                <div class="mb-1">
+                    <label class="form-label">Email:</label>
+                    <span>@booker.Email</span>
+                </div>
+                <div class="mb-1">
+                    <label class="form-label">Telefonnummer:</label>
+                    <span>@booker.PhoneNumber</span>
+                </div>
+                <div class="mb-1">
+                    <label class="form-label">Boknings nummer:</label>
+                    <span>@booker.BookingNumber</span>
+                </div>
+            </div>
+        </div>
+</div>
 @code {
     [Parameter]
     public BookerDTO booker { get; set; }
