--- a/BookerPortal.Web/Components/Pages/MovieTheatrePages/Movie.razor
+++ b/BookerPortal.Web/Components/Pages/MovieTheatrePages/Movie.razor
@@ -115,7 +115,7 @@
     }
     protected void NavigateToAddPage()
     {
-        Navigation.NavigateTo("/add-item-movie");
+        Navigation.NavigateTo("/Add-Movie");
     }
 
 }
