--- a/BookerPortal.Web/Components/EditItems/MovieTheatreEdit/EditBooker/AddItemsBooker.razor
+++ b/BookerPortal.Web/Components/EditItems/MovieTheatreEdit/EditBooker/AddItemsBooker.razor
@@ -4,6 +4,7 @@
 @rendermode InteractiveServer
 @inject IShowService showService
 @inject IReservationService reservationService
+@inject NavigationManager Navigation
 
 <style>
     .confirmation-modal {
@@ -74,6 +75,7 @@
                 <input type="number" id="seatCount" @bind="selectedSeatCount" min="1" max="10" />
             </div>
             <div class="modal-footer">
+                <button class="btn btn-primary" @onclick="NavigateToAddBooker">Lägg till</button>
                 <button class="btn btn-primary" @onclick="MakeReservation">Boka</button>
                 <button class="btn btn-secondary" @onclick="CloseModal">Cancel</button>
             </div>
@@ -137,10 +139,14 @@
         }
     }
 
+    private void NavigateToAddBooker()
+    {
+        Navigation.NavigateTo("/add-booker");
+    }
+
     protected async Task CloseModal()
     {
         isModalOpen = false;
         await OnClose.InvokeAsync(false);
     }
 }
-
