--- a/BookerPortal.Web/Components/EditItems/MovieTheatreEdit/EditEmployee/AddItemsEmployee.razor
+++ b/BookerPortal.Web/Components/EditItems/MovieTheatreEdit/EditEmployee/AddItemsEmployee.razor
@@ -5,8 +5,19 @@
 @using System.Text.RegularExpressions
 @inject IEmployeeService employeeService
 @inject NavigationManager navigationManager
+@using Microsoft.AspNetCore.Antiforgery;
+@attribute [RequireAntiforgeryToken(required: false)]
 
 <style>
+    body {
+        margin-top: 10px;
+        background-color: #f8f9fa;
+    }
+
+    .container {
+        margin-top: 25px;
+    }
+
     .register-frame {
         border: 2px solid black;
         padding: 20px;
@@ -14,14 +25,16 @@
     }
 
         .register-frame input[type="text"],
-        .register-frame input[type="text"] {
+        .register-frame input[type="password"],
+        .register-frame input[type="email"] {
             border: 1px solid black;
             border-radius: 5px;
             color: black;
         }
 
             .register-frame input[type="text"]::placeholder,
-            .register-frame input[type="text"]::placeholder {
+            .register-frame input[type="password"]::placeholder,
+            .register-frame input[type="email"]::placeholder {
                 color: black;
                 opacity: 0.7;
             }
@@ -53,49 +66,46 @@
     }
 </style>
 
-<div class="row">
-    <div class="col-lg-4 offset-lg-4 pt-4 pb-4 register-frame">
-        <div class="text-center mb-3">
-            <img src="login.png" style="max-height:10rem;" />
+<div class="container">
+    <div class="row">
+        <div class="col-lg-4 offset-lg-4 pt-4 pb-4 register-frame">
+            <div class="text-center mb-3">
+                <img src="login.png" style="max-height:10rem;" />
+            </div>
+            <EditForm Model="@Model" FormName="RegisterForm" OnSubmit="SubmitForm">
+                <div class="mb-3">
+                    <label>Name</label>
+                    <InputText @bind-Value="Model.Name" class="form-control" placeholder="Name" />
+                    <ValidationMessage For="() => Model.Name" />
+                </div>
+                <div class="mb-3">
+                    <label>Surname</label>
+                    <InputText @bind-Value="Model.LastName" class="form-control" placeholder="Surname" />
+                    <ValidationMessage For="() => Model.LastName" />
+                </div>
+                <div class="mb-3">
+                    <label>Email</label>
+                    <InputText @bind-Value="Model.Email" class="form-control" placeholder="Email" />
+                    <ValidationMessage For="() => Model.Email" />
+                </div>
+                <div class="mb-3">
+                    <label>Password</label>
+                    <InputText @bind-Value="Model.Password" class="form-control" placeholder="Password" type="password" />
+                    <ValidationMessage For="() => Model.Password" />
+                </div>
+                <div class="mb-3">
+                    <label>Role</label>
+                    <InputText @bind-Value="Model.Role" class="form-control" placeholder="Role: Admin, Manager, Employee" />
+                    <ValidationMessage For="() => Model.Role" />
+                </div>
+                <div class="mb-3 text-center">
+                    <span class="text-danger">@errorMessage</span>
+                </div>
+                <div class="mb-3 d-grid gap-2">
+                    <button type="submit" class="btn btn-primary">Lägg till</button>
+                </div>
+            </EditForm>
         </div>
-        <EditForm Model="@Model" FormName="RegisterForm" OnSubmit="SubmitForm">
-            <div class="mb-3">
-                <label>Name</label>
-                <InputText @bind-Value="Model.Name" class="form-control" placeholder="Name" />
-                <ValidationMessage For="() => Model.Name" />
-            </div>
-            <div class="mb-3">
-                <label>Surname</label>
-                <InputText @bind-Value="Model.LastName" class="form-control" placeholder="Surname" />
-                <ValidationMessage For="() => Model.LastName" />
-            </div>
-            <div class="mb-3">
-                <label>Email</label>
-                <InputText @bind-Value="Model.Email" class="form-control" placeholder="Email" />
-                <ValidationMessage For="() => Model.Email" />
-            </div>
-            <div class="mb-3">
-                <label>Password</label>
-                <InputText @bind-Value="Model.Password" class="form-control" placeholder="Password" />
-                <ValidationMessage For="() => Model.Password" />
-            </div>
-            <div class="mb-3">
-                <label>Company</label>
-                <InputNumber @bind-Value="Model.CompanyId" class="form-control" placeholder="CompanyId" />
-                <ValidationMessage For="() => Model.CompanyId" />
-            </div>
-            <div class="mb-3">
-                <label>Role</label>
-                <InputText @bind-Value="Model.Role" class="form-control" placeholder="Role: Admin, Manager, Employee" />
-                <ValidationMessage For="() => Model.Role" />
-            </div>
-            <div class="mb-3 text-center">
-                <span class="text-danger">@errorMessage</span>
-            </div>
-            <div class="mb-3 d-grid gap-2">
-                <button type="submit" class="btn btn-primary">Register</button>
-            </div>
-        </EditForm>
     </div>
 </div>
 
@@ -107,32 +117,47 @@
 
     private async Task SubmitForm()
     {
-        EmployeeDTO employeeDTO = new EmployeeDTO
+        try
+        {
+            string rolePattern = "^(Admin|Manager|Employee)$";
+            if (!Regex.IsMatch(Model.Role, rolePattern, RegexOptions.IgnoreCase))
             {
-                Name = Model.Name,
-                LastName = Model.LastName,
-                Email = Model.Email,
-                Password = Model.Password,
-                CompanyId = Model.CompanyId,
-//                Role = Model.Role
-            };
+                errorMessage = "Invalid role. Please enter Admin, Manager, or Employee.";
+                return;
+            }
 
-        string rolePattern = "^(admin|manager|employee)$";
-        if (!Regex.IsMatch(Model.Role, rolePattern, RegexOptions.IgnoreCase))
-        {
-            errorMessage = "Invalid role. Please enter Admin, Manager, or Employee.";
-            return;
+            if (!Enum.TryParse(Model.Role, true, out EmployeeRole parsedRole))
+            {
+                errorMessage = "Failed to parse the role.";
+                return;
+            }
+
+            EmployeeDTO employeeDTO = new EmployeeDTO
+                {
+                    Name = Model.Name,
+                    LastName = Model.LastName,
+                    Email = Model.Email,
+                    Password = Model.Password,
+                    CompanyId = 1,
+                    Role = parsedRole,
+                };
+
+            var response = await employeeService.PostEmployee(employeeDTO);
+
+            if (response.IsSuccessStatusCode)
+            {
+                navigationManager.NavigateTo("/employee");
+            }
+            else
+            {
+                errorMessage = "Failed to register the employee. Status code: " + response.StatusCode;
+            }
         }
-
-        var response = await employeeService.PostEmployee(employeeDTO);
-
-        if (response.IsSuccessStatusCode)
+        catch (Exception ex)
         {
-            navigationManager.NavigateTo("/employee");
-        }
-        else
-        {
-            errorMessage = "Failed to register the employee.";
+            errorMessage = "An error occurred while processing the request: " + ex.Message;
+            // Log the exception for further analysis
+            Console.WriteLine(ex.ToString());
         }
     }
 }
