--- a/BookerPortal.Web/Components/Pages/Account/OfflineHome.razor
+++ b/BookerPortal.Web/Components/Pages/Account/OfflineHome.razor
@@ -55,7 +55,7 @@
             box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
             width: 200px;
             height: 60px;
-            border-radius: 10px; /* Add rounded corners */
+            border-radius: 10px; 
         }
 
             .welcome-buttons button:hover {
