--- a/BookerPortal.Web/Components/Pages/MovieTheatrePages/Salon.razor
+++ b/BookerPortal.Web/Components/Pages/MovieTheatrePages/Salon.razor
@@ -4,6 +4,7 @@
 @using BookerPortal.Web.Components.EditItems.MovieTheatreEdit.EditSalon
 @rendermode InteractiveServer
 @inject ISalonService salonService
+@inject NavigationManager Navigation
 @attribute [StreamRendering]
 @attribute [Authorize(Roles = "Admin,Manager")]
 <PageTitle>Bokningar</PageTitle>
@@ -43,6 +44,7 @@
                         <td>@item.AvailableSeats</td>
 
                         <td>
+                            <button class="btn btn-success btn-sm" @onclick="NavigateToAddPage">Lägg till</button>
                             <button class="btn btn-warning btn-sm" @onclick="() => SetEditMode(item)">Redigera</button>
                             @if (!isEditMode || selectedId != item.Id)
                             {
@@ -105,6 +107,10 @@
         selectedId = salonDTO.Id;
         isEditMode = true;
 
+    }
+    protected void NavigateToAddPage()
+    {
+        Navigation.NavigateTo("/Add-Salon");
     }
 }
 
