--- a/BookerPortal.Web/Components/EditItems/MovieTheatreEdit/EditSalon/EditItemSalon.razor
+++ b/BookerPortal.Web/Components/EditItems/MovieTheatreEdit/EditSalon/EditItemSalon.razor
@@ -6,8 +6,8 @@
 @inject ISalonService salonService
 
 <td>
-    <button class="btn btn-success" @onclick="() => EditSalon()">
-        Save
+    <button class="btn btn-success btn-sm" @onclick="() => EditSalon()">
+        Spara
     </button>
 </td>
 
