--- a/BookerPortal.Web/Components/Pages/MovieTheatrePages/Reservation.razor
+++ b/BookerPortal.Web/Components/Pages/MovieTheatrePages/Reservation.razor
@@ -14,8 +14,8 @@
         <thead class="thead-dark">
             <tr>
                 <th>ID</th>
-                <th>Booker ID</th>
-                <th>Show ID</th>
+                <th>Boknings ID</th>
+                <th>Visning ID</th>
                 <th>Platser</th>
                 <th>Tid</th>
                 <th>Actions</th>
