--- a/BookerPortal.Web/Components/EditItems/MovieTheatreEdit/EditMovie/EditItemMovie.razor
+++ b/BookerPortal.Web/Components/EditItems/MovieTheatreEdit/EditMovie/EditItemMovie.razor
@@ -7,7 +7,7 @@
 
 <td>
     <button class="btn btn-success btn-sm" @onclick="() => EditMovie()">
-        Save
+        Spara
     </button>
 </td>
 
