--- a/BookerPortal.Web/Components/Pages/MovieTheatrePages/Booking.razor
+++ b/BookerPortal.Web/Components/Pages/MovieTheatrePages/Booking.razor
@@ -16,11 +16,11 @@
         <thead class="thead-dark">
             <tr>
                 <th>ID</th>
-                <th>Name</th>
-                <th>Last Name</th>
+                <th>Namn</th>
+                <th>Efternamn</th>
                 <th>Email</th>
-                <th>Phone Number</th>
-                <th>Booking number</th>
+                <th>Telefon</th>
+                <th>Boknings nummer</th>
                 <th>Actions</th>
             </tr>
         </thead>
