--- a/BookerPortal.Web/Components/EditItems/MovieTheatreEdit/EditMovie/AddItemsMovie.razor
+++ b/BookerPortal.Web/Components/EditItems/MovieTheatreEdit/EditMovie/AddItemsMovie.razor
@@ -190,7 +190,7 @@
             var result = await MovieService.PostMovie(movieDTO);
             if (result != null)
             {
-                successMessage = "Movie added successfully";
+                successMessage = "Film tillagd";
                 errorMessage = "";
             }
             else
