--- a/BookerPortal.Web/Components/EditItems/MovieTheatreEdit/EditShow/AddItemsShow.razor
+++ b/BookerPortal.Web/Components/EditItems/MovieTheatreEdit/EditShow/AddItemsShow.razor
@@ -86,18 +86,8 @@
                 </div>
 
                 <div class="mb-3">
-                    <label for="SalonId" class="form-label">Salon ID:</label>
+                    <label for="SalonId" class="form-label">Salong ID:</label>
                     <InputNumber id="SalonId" class="form-control" @bind-Value="showDTO.SalonId" required />
-                </div>
-
-                <div class="mb-3">
-                    <label for="SalonName" class="form-label">Salong:</label>
-                    <InputText id="SalonName" class="form-control" @bind-Value="showDTO.SalonName" required />
-                </div>
-
-                <div class="mb-3">
-                    <label for="MovieTitle" class="form-label">Telefon nummer:</label>
-                    <InputText id="MovieTitle" class="form-control" @bind-Value="showDTO.MovieTitle" required />
                 </div>
 
                 <div class="mb-3">
@@ -108,11 +98,6 @@
                 <div class="mb-3">
                     <label for="EndTime" class="form-label">Sluttid:</label>
                     <InputDate id="EndTime" class="form-control" @bind-Value="showDTO.EndTime" required />
-                </div>
-
-                <div class="mb-3">
-                    <label for="AvailableSeats" class="form-label">Antal platser:</label>
-                    <InputNumber id="AvailableSeats" class="form-control" @bind-Value="showDTO.AvailableSeats" required />
                 </div>
 
                 <div class="mb-3 text-center">
