--- a/BookerPortal.Web/Components/EditItems/MovieTheatreEdit/EditEmployee/AddItemsEmployee.razor
+++ b/BookerPortal.Web/Components/EditItems/MovieTheatreEdit/EditEmployee/AddItemsEmployee.razor
@@ -4,7 +4,7 @@
 @using BookerPortal.Web.ViewModels
 @using System.Text.RegularExpressions
 @inject IEmployeeService employeeService
-@inject NavigationManager navigationManager
+@inject NavigationManager Navigation
 @using Microsoft.AspNetCore.Antiforgery;
 @attribute [RequireAntiforgeryToken(required: false)]
 
@@ -74,12 +74,12 @@
             </div>
             <EditForm Model="@Model" FormName="RegisterForm" OnSubmit="SubmitForm">
                 <div class="mb-3">
-                    <label>Name</label>
+                    <label>Namn</label>
                     <InputText @bind-Value="Model.Name" class="form-control" placeholder="Name" />
                     <ValidationMessage For="() => Model.Name" />
                 </div>
                 <div class="mb-3">
-                    <label>Surname</label>
+                    <label>Efternamn</label>
                     <InputText @bind-Value="Model.LastName" class="form-control" placeholder="Surname" />
                     <ValidationMessage For="() => Model.LastName" />
                 </div>
@@ -89,12 +89,12 @@
                     <ValidationMessage For="() => Model.Email" />
                 </div>
                 <div class="mb-3">
-                    <label>Password</label>
+                    <label>Lösenord</label>
                     <InputText @bind-Value="Model.Password" class="form-control" placeholder="Password" type="password" />
                     <ValidationMessage For="() => Model.Password" />
                 </div>
                 <div class="mb-3">
-                    <label>Role</label>
+                    <label>Roll</label>
                     <InputText @bind-Value="Model.Role" class="form-control" placeholder="Role: Admin, Manager, Employee" />
                     <ValidationMessage For="() => Model.Role" />
                 </div>
@@ -109,18 +109,51 @@
     </div>
 </div>
 
+            <div style="text-align: center; display: flex; align-items: center; flex-direction: column;">
+                @if (!string.IsNullOrWhiteSpace(successMessage))
+                {
+
+                    <div class="success-message">
+                        <span style="display: flex; align-items: center;">
+                            @successMessage
+                            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-check" viewBox="0 0 16 16">
+                                <path d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425z" />
+                            </svg>
+                        </span>
+                    </div>
+                    
+                }
+                @if (!string.IsNullOrWhiteSpace(errorMessage))
+                {
+                    
+                    <div class="error-message">
+                        @errorMessage
+                        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-x" viewBox="0 0 16 16">
+                            <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708" />
+                        </svg>
+                    </div>
+                }
+            </div>
+
+
+
 @code {
     [SupplyParameterFromForm]
-    public EmployeeViewModel Model { get; set; } = new();
+    public EmployeeDTO Model { get; set; } = new();
 
-    private string? errorMessage;
-
+    private string successMessage = "";
+    private string errorMessage = "";
 
     public enum EmployeeRole
     {
         Admin,
         Manager,
         Employee
+    }
+
+    protected override void OnInitialized()
+    {
+        Model ??= new EmployeeDTO();
     }
 
     private async Task SubmitForm()
@@ -152,19 +185,23 @@
 
             var response = await employeeService.PostEmployee(employeeDTO);
 
-            if (response.IsSuccessStatusCode)
+            if (employeeDTO != null)
             {
-                navigationManager.NavigateTo("/employee");
+
+                successMessage = "Bokning tillagd";
+                errorMessage = "";
+
             }
             else
             {
-                errorMessage = "Failed to register the employee. Status code: " + response.StatusCode;
+                successMessage = "";
+                errorMessage = "Något gick fel. Försök igen.";
             }
+
         }
         catch (Exception ex)
         {
-            errorMessage = "An error occurred while processing the request: " + ex.Message;
-            // Log the exception for further analysis
+            
             Console.WriteLine(ex.ToString());
         }
     }
