--- a/BookerPortal.Web/Components/EditItems/MovieTheatreEdit/EditEmployee/AddItemsEmployee.razor
+++ b/BookerPortal.Web/Components/EditItems/MovieTheatreEdit/EditEmployee/AddItemsEmployee.razor
@@ -66,7 +66,7 @@
     }
 </style>
 
-<div class="container">
+<div class="container" style="display: @(successMessage != "" ? "none" : "block");">
     <div class="row">
         <div class="col-lg-4 offset-lg-4 pt-4 pb-4 register-frame">
             <div class="text-center mb-3">
